--- a/README.html
+++ b/README.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><style>body {
+<!DOCTYPE html>
+<html>
+<head>
+
+    <meta charset="utf-8"><style>body {
   width: 45em;
   border: 1px solid #ddd;
   outline: 1300px solid #fff;
@@ -1014,7 +1018,8 @@ body .markdown-body
     page-break-after: avoid;
   }
 }
-</style><title>README</title></head><body><article class="markdown-body"><p><a href="https://bitdeli.com/free" title="Bitdeli Badge"><img alt="Bitdeli Badge" src="https://d2weczhvl823v0.cloudfront.net/kronik3r/daktilo/trend.png" /></a></p>
+</style><title>README</title></head>
+<body><article class="markdown-body"><p><a href="https://bitdeli.com/free" title="Bitdeli Badge"><img alt="Bitdeli Badge" src="https://d2weczhvl823v0.cloudfront.net/kronik3r/daktilo/trend.png" /></a></p>
 <h1 id="daktilo"><a name="user-content-daktilo" href="#daktilo" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Daktilo</h1>
 <p>Daktilo is a <a href="jekyllrb.com">Jekyll</a> theme with a minimal design inspired from typewriters.</p>
 <h1 id="features"><a name="user-content-features" href="#features" class="headeranchor-link" aria-hidden="true"><span class="headeranchor"></span></a>Features</h1>
